plugins {
    id 'java'
    id 'application'
}

group = 'com.novusforge.astrum'
version = '0.1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
}

dependencies {
    implementation libs.joml
    implementation libs.bundles.lwjgl
    implementation libs.vkbootstrap

    // Natives for Linux
    runtimeOnly variantOf(libs.lwjgl) { classifier("natives-linux-arm64") }
    runtimeOnly variantOf(libs.lwjgl.glfw) { classifier("natives-linux-arm64") }
    runtimeOnly variantOf(libs.lwjgl.stb) { classifier("natives-linux-arm64") }
    runtimeOnly variantOf(libs.lwjgl.shaderc) { classifier("natives-linux-arm64") }
    runtimeOnly variantOf(libs.lwjgl.vma) { classifier("natives-linux-arm64") }

    testImplementation libs.junit.api
    testRuntimeOnly libs.junit.engine
}

application {
    mainClass = 'com.novusforge.astrum.game.Main'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += [
        '--enable-preview'
    ]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
        '--enable-preview',
        '--enable-native-access=ALL-UNNAMED'
    ]
    environment "LD_LIBRARY_PATH", (System.getenv("LD_LIBRARY_PATH") ?: "") + ":/usr/lib/jvm/java-21-openjdk-arm64/lib"
}

test {
    useJUnitPlatform()
}
